# hacspec-specs

./: Cargo.toml
bbs/: Cargo.toml  README.md
bbs/src/: ciphersuite.rs  error.rs  keygen.rs  lib.rs  sign.rs  utils.rs
bls12-381/src/: bls12-381.rs
